test/fail/basic_syntax/bad_start_token.lly
#[
SyntaxError: Unexpected token +.
    from bad_start_token.lly:6
]#

+
